# forge-for-ipad

./: .gitignore  CONTRIBUTING.md  Makefile  NOTICE  Package.swift  README.md  SECURITY.md  xtool.yml
.github/: forge.markdownlint-cli2.jsonc
.github/scripts/: check_docs.py
.github/workflows/: ci.yml
Config/: ForgeInfo.plist  ReleasePublicKey.json  Shared.xcconfig
Forge/App/: ForgeApp.swift  ForgeAppModel.swift  ForgeCommands.swift
Forge/Design/: ForgeTheme.swift
Forge/Models/: AcceleratorBridgeModels.swift  AppModels.swift  RunnerModels.swift
Forge/Resources/: ForgeJIT.js
Forge/Runtime/: VirtualMachineDriver.swift
Forge/Services/: AcceleratorBridgeServer.swift  AssetManager.swift  BackgroundExecutionCoordinator.swift  JobStore.swift  RunnerClient.swift  RunnerCredentialVault.swift  RunnerDiscovery.swift  RuntimeManager.swift  StikDebugCoordinator.swift  WorkspaceCoordinator.swift  WorkspaceExecutionService.swift
Forge/Views/: BottomPanel.swift  ForgeSceneRoot.swift  ForgeSettingsView.swift  SourceEditorView.swift  ToolScenes.swift  WorkspaceHubView.swift  WorkspaceSceneView.swift
ForgeCore/: AssetPackIdentity.swift  ForgeJob.swift  ForgeRoute.swift  ForgeScene.swift  ProjectManifest.swift  RunnerInstanceID.swift  ToolchainPlan.swift  WorkspaceRevision.swift
ForgeTests/: ForgeCoreTests.swift
bridge/: .gitignore  Makefile  README.md
bridge/include/: forge_accelerator.h  forge_accelerator.hpp
bridge/openapi/: forge-accelerator-v1.openapi.json
bridge/python/: README.md  pyproject.toml
bridge/python/src/forge_accelerator/: __init__.py  cli.py  client.py  models.py
bridge/python/tests/: test_client.py  test_contract.py
bridge/rust/: Cargo.toml
bridge/rust/examples/: capabilities.rs
bridge/rust/src/: lib.rs
bridge/schema/: forge-accelerator-v1.schema.json
docs/: architecture.md  development.md  distribution.md  ipados-integration.md  known-limitations.md  threat-model.md
guest/: README.md  protocol.schema.json
guest/config/: capabilities.json
guest/scripts/: install-payload.sh
guest/systemd/: forge-guest-agent.service
guest/tests/: test_agent.py  test_health.py  test_packs.py
images/: README.md  sources.lock.toml
images/manifests/: archlinuxarm-lxc.toml  manjaro-arm.toml  ubuntu-seed.toml
images/packs/: containers.toml  core.toml  cpp.toml  lxc.toml  ml.toml  python.toml  rust.toml  workstation.toml  xfce.toml
images/policy/: channels.toml
images/provision/: arch-lxc.sh  (+3 more)
release/: .gitignore  Makefile  README.md  pyproject.toml
release/src/forge_release/: __init__.py  assets.py  canonical.py  cli.py  crypto.py  packaging.py  recovery.py  sidestore.py  validation.py
release/tests/: conftest.py  test_assets.py  test_crypto_canonical.py  test_packaging_feed.py  test_recovery_validation_cli.py
runner/: .gitignore  Makefile  README.md  pyproject.toml
runner/deploy/: forge-runner-avahi.service  forge-runner.service  install.sh
runner/image/: Containerfile  README.md
runner/src/forge_runner/: app.py  cas.py  cli.py  config.py  database.py  executor.py  identity.py  jobs.py  models.py  paths.py  security.py
runner/tests/: conftest.py  test_auth_capabilities.py  test_cas_snapshots.py  test_executor.py  test_identity.py  test_jobs.py  test_pty.py  test_recovery.py  test_storage_quotas.py
runtime/: README.md  fetch-utm.sh  utm.lock.json
tools/: build_ipa.sh  render_icon.sh  validate_ipa.py  validate_project.py
(+11 files in other folders)
