[package]
name = "forge-accelerator"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Typed guest client for the Forge Core ML and Metal accelerator bridge"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
